Analyst profile page - Button alignment issue fixed

--- a/src/components/analyst-search/sass/analyst-search.scss
+++ b/src/components/analyst-search/sass/analyst-search.scss
@@ -39,7 +39,7 @@
 		.submit-btn {
 			width: 100%;
 			//border-color: $orange;
-			margin-top: 35px;
+			margin-top: 34px;
 			color: $white;
 			height: 45px;
 			padding-top: 10px;
